--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
   --card-text: #4d4d4d; 
   --header: #3498db;
   --bluetext: #3498db;
+  --sidebar: rgba(128, 128, 128, 0.5);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,6 +28,7 @@
     --card-text: #cccccc; 
     --header: #194a7a;
     --bluetext: #3498db;
+    --sidebar: rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -41,4 +43,92 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.h-60vh {
+  height: 60vh;
+}
+
+
+.layout-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 20px;
+  padding: 20px;
+}
+
+.category-container {
+  display: grid;
+  grid-template-columns:  1fr;
+  gap: 20px;
+}
+
+.diagram-container {
+  justify-self: center;
+  width: 100%; 
+  max-width: 500px; 
+  margin: 0 auto;
+}
+
+
+.category-btn {
+  background-color: var(--symptom-buttons); 
+  color: white; 
+  width: 100%; 
+  border: 1px solid; 
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  outline: none; 
+  transition: all 0.2s; 
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden; 
+  text-overflow: ellipsis;
+}
+
+.category-btn:focus {
+  outline: none; 
+  box-shadow: 0 0 0 2px rgba(72, 187, 120, 0.5); 
+}
+
+.category-btn:hover {
+  background-color: #2f855a; 
+}
+
+@media (min-width: 640px) {
+  .category-btn {
+    width: 12rem; 
+  }
+}
+
+.diagram-container svg {
+  width: 100%;
+  height: auto; 
+}
+
+
+.category-btn:hover {
+  background-color: #dcdcdc;
+}
+
+/* Mobile-Specific Layout */
+@media screen and (max-width: 768px) {
+  .layout-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .diagram-container {
+    margin: 0 auto;
+    max-width: 90vw;
+  }
+
+  .category-btn {
+    width: 100%;
+    font-size: 0.7rem;
+  }
+
+}
+
+
 
